--- a/Computer-Network/网络协议和网络体系结构.markdown
+++ b/Computer-Network/网络协议和网络体系结构.markdown
@@ -5,7 +5,7 @@
 
 2.计算机网络体系结构是计算机网络的各层及其服务和协议的集合，也就是它们所应完成的所有功能的定义，是用户进行网络互连和通信系统设计的基础。
 
-3.OSI七层模型从下到上分别为物理层、数据链路层、网络层、传输层、会话层、表示层和应用层。
+3.##**OSI七层模型从下到上分别为物理层、数据链路层、网络层、传输层、会话层、表示层和应用层。**
 第7层 应用层
 应用层（Application Layer）提供为应用软件而设的接口，以设置与另一应用软件之间的通信。例如: HTTP，HTTPS，FTP，TELNET，SSH，SMTP，POP3等。
 
@@ -30,15 +30,17 @@
 第1层 物理层
 物理层（Physical Layer）在局部局域网上传送数据帧（data frame），它负责管理计算机通信设备和网络媒体之间的互通。包括了针脚、电压、线缆规范、集线器、中继器、网卡、主机适配器等。
 
-类似于OSI-RM层次模型，TCP/IP的层次结构包含了四个层次，从下到上分别为网络接入层、互连网络层、传输层和应用层。
-它常被通称为TCP/IP协议族（英语：TCP/IP Protocol Suite，或TCP/IP Protocols），简称TCP/IP[2]。
+类似于OSI-RM层次模型，##**TCP/IP的层次结构包含了四个层次，从下到上分别为网络接入层、互连网络层、传输层和应用层。**
+它常被通称为TCP/IP协议族（英语：TCP/IP Protocol Suite，或TCP/IP Protocols），简称TCP/IP。
 因为该协议家族的两个核心协议：TCP（传输控制协议）和IP（网际协议），为该家族中最早通过的标准[3]。由于在网络通讯协议普遍采用分层的结构，当多个层次的协议共同工作时，类似计算机科学中的堆栈，
-因此又被称为TCP/IP协议栈（英语：TCP/IP Protocol Stack）[4][5] 。这些协议最早发源于美国国防部（缩写为DoD）的ARPA网项目，因此也被称作DoD模型（DoD Model）[6]。这个协议族由互联网工程任务组负责维护。
+因此又被称为TCP/IP协议栈（英语：TCP/IP Protocol Stack） 。这些协议最早发源于美国国防部（缩写为DoD）的ARPA网项目，因此也被称作DoD模型（DoD Model）。这个协议族由互联网工程任务组负责维护。
 
 TCP/IP提供点对点的链接机制，将数据应该如何封装、定址、传输、路由以及在目的地如何接收，都加以标准化。它将软件通信过程抽象化为四个抽象层，采取协议堆栈的方式，分别实现出不同通信协议。
 协议族下的各种协议，依其功能不同，被分别归属到这四个层次结构之中[7][8]，常被视为是简化的七层OSI模型。
 它们有一定的对应关系。
-
+#区别：
+    1.**OSI/RM只关注有连接服务，TCP/IP还关心无连接服务**
+    2.**OSI/RM严格分层，TCP/IP允许跨层**
  4.协议各层间存在信息交换，一个系统中的相邻两个层次间的信息交换是通过服务访问点这样的接口实现的。每一层和相邻层有接口，较低层通过接口向它的上一层提供服务，但这一服务的实现细节对上层是屏蔽的。
  较高层又是在较低层提供的低级服务的基础上实现更高级的服务。
 
