--- a/Computer-Network/数据通信技术.markdown
+++ b/Computer-Network/数据通信技术.markdown
@@ -1,33 +1,56 @@
 1．数据是预先约定的具有某种含义的数字、字母或符号的集合，数据中包含着信息，信息可通过解释数据而产生的，信号是数据的电磁（或电子）编码。
 
-    2．数据通信是指在计算机与计算机以及计算机与终端之间的数据信息传送的过程，包括数据传输和数据传输前后的数据处理两个方面的内容。数据通信系统就是完成上述两个部分功能的通信系统，
+2．数据通信是指在计算机与计算机以及计算机与终端之间的数据信息传送的过程，包括数据传输和数据传输前后的数据处理两个方面的内容。数据通信系统就是完成上述两个部分功能的通信系统，
     **由信源（发送部分）、传输系统（传输介质）和信宿（接收部分）三个部分组成。**
 
-    3．衡量数据通信系统性能的指标有传输速率、带宽、传输差错率和时延、信道容量等，工作速率包括传码速率、传信速率，传输差错率包括误码率、误帧率和误组率等，时延主要包括发送时延、传播时延和处理时延。 
+3．衡量数据通信系统性能的指标有传输速率、带宽、传输差错率和时延、信道容量等，工作速率包括传码速率、传信速率，传输差错率包括误码率、误帧率和误组率等，时延主要包括发送时延、传播时延和处理时延。 
 
-    4．任何信道在传输信号时都存在一个数据传输率的限制，这就是Nyquist（奈奎斯特）定理和Shannon（香农）定理所要告诉我们的结论。
+4．任何信道在传输信号时都存在一个数据传输率的限制，这就是Nyquist（奈奎斯特）定理和Shannon（香农）定理所要告诉我们的结论。
+*******
+# 典型例题：
+    1
+若某通信链路的传信速率为2400b/s, 采用四电平传输，则传码速率为
+B.
+1200波特
+正确答案：B你选对了
+2
+假设带宽为3KHz的模拟信道中只存在高斯白噪声，信噪比是20dB，则该信道的最高数据传输速率是
 
-    5．传输介质包括有线的和无线的两大类，在有线的传输介质中，电磁波沿着固体媒体铜线或光纤向前传播，而无线的传输介质就是指利用大气和外层空间作为传播电磁波的通路。**有线传输介质主要有双绞线、同轴电缆和光缆等，
+
+A.
+19.98 kbit/s 
+正确答案：A你选对了
+3
+若某信道的传码速率为3200 Baud，采用16电平传输，则其传信速率为_______b/s。
+
+12800
+正确答案：12800
+4
+若某信道带宽为5kHz，无噪声，采用8电平传输，则其所能达到的最大的传信速率是           kb/s
+30
+正确答案：30
+*********
+5．传输介质包括有线的和无线的两大类，在有线的传输介质中，电磁波沿着固体媒体铜线或光纤向前传播，而无线的传输介质就是指利用大气和外层空间作为传播电磁波的通路。**有线传输介质主要有双绞线、同轴电缆和光缆等，
     无线传输介质主要包括无线电波、地面微波、卫星微波、红外线等。**
 
-    6．为了提高传输介质的利用率，我们可以使用多路复用技术，也就是指在一条信道中传输多路信号的技术。**多路复用技术有频分复用、时分复用、码分复用、波分复用四种**，它们分别用在不同的场合。
+6．为了提高传输介质的利用率，我们可以使用多路复用技术，也就是指在一条信道中传输多路信号的技术。**多路复用技术有频分复用、时分复用、码分复用、波分复用四种**，它们分别用在不同的场合。
 
-    7．为了提高线路的利用率，用户终端要通过交换网连接起来，**数据交换技术主要包括电路交换、报文交换和分组交换三种**，它们各自有优缺点。
+7．为了提高线路的利用率，用户终端要通过交换网连接起来，**数据交换技术主要包括电路交换、报文交换和分组交换三种**，它们各自有优缺点。
 
-    8．电路交换方式是两台计算机或终端在相互通信之前，预先建立起一条物理连接，也就是实际的物理链路，在通信的过程中自始至终使用该链路进行数据传输，并且不允许其它用户同时共享该链路，通信结束后再拆除该链路。
+8．电路交换方式是两台计算机或终端在相互通信之前，预先建立起一条物理连接，也就是实际的物理链路，在通信的过程中自始至终使用该链路进行数据传输，并且不允许其它用户同时共享该链路，通信结束后再拆除该链路。
 
-    9．报文交换是一种以报文为单位存储—转发处理方式，当用户的报文到达交换机时，先放在交换机的存储器里进行存储，等到输出线路有空闲的时候，再将该报文进行转发。
+9．报文交换是一种以报文为单位存储—转发处理方式，当用户的报文到达交换机时，先放在交换机的存储器里进行存储，等到输出线路有空闲的时候，再将该报文进行转发。
 
-   10．分组交换也是一种存储—转发处理方式，其处理过程是需将用户的原始信息（报文）分成若干个小的数据单元来传送，这个数据单元专门称之为分组，也可称之为“包”。
+10．分组交换也是一种存储—转发处理方式，其处理过程是需将用户的原始信息（报文）分成若干个小的数据单元来传送，这个数据单元专门称之为分组，也可称之为“包”。
 
-   11． 差错控制的基本思路是：在发送端被传送的信息码序列的基础上，按照一定的规则加入若干“监督码元”后进行传输，这些加入的码元与原来的信息码序列之间存在着某种确定的约束关系。在接收数据时，检验信息码元与
+11． 差错控制的基本思路是：在发送端被传送的信息码序列的基础上，按照一定的规则加入若干“监督码元”后进行传输，这些加入的码元与原来的信息码序列之间存在着某种确定的约束关系。在接收数据时，检验信息码元与
    监督码元之间的既定的约束关系，如该关系遭到破坏，则在接收端可以发现传输中的错误，乃至纠正错误。
 
-   12． 纠错编码之所以具有检错和纠错能力，是因为在信息码之外附加了监督码。监督码对于表示信息来说是“冗余”的，但它提高了传输的可靠性。但是，监督
+12． 纠错编码之所以具有检错和纠错能力，是因为在信息码之外附加了监督码。监督码对于表示信息来说是“冗余”的，但它提高了传输的可靠性。但是，监督
 
    码的引入，降低了信道的传输效率。一般说来，引入监督码越多，码的检错、纠错能力越强，但信道的传输效率下降也越多。
 
-   13．  奇偶校验码是一种最简单的检错码，在计算机数据传输中得到广泛的应用。
+13．  奇偶校验码是一种最简单的检错码，在计算机数据传输中得到广泛的应用。
 
-   14．  循环码是一种线性分组码，即前ｋ是位为信息位，后ｒ位为监督位，它除了具有线性分组码的一般性质外，还具有循环性。循环码是线性分组码中一类重要的码，它是以现代代数理论作为基础建立起来的。
+14．  循环码是一种线性分组码，即前ｋ是位为信息位，后ｒ位为监督位，它除了具有线性分组码的一般性质外，还具有循环性。循环码是线性分组码中一类重要的码，它是以现代代数理论作为基础建立起来的。
    循环码的检错能力较强，目前在理论和实践上都有较大的发展。
