--- a/Computer-Network/数据通信技术.markdown
+++ b/Computer-Network/数据通信技术.markdown
@@ -3,9 +3,23 @@
 2．数据通信是指在计算机与计算机以及计算机与终端之间的数据信息传送的过程，包括数据传输和数据传输前后的数据处理两个方面的内容。数据通信系统就是完成上述两个部分功能的通信系统，
     **由信源（发送部分）、传输系统（传输介质）和信宿（接收部分）三个部分组成。**
 
-3．衡量数据通信系统性能的指标有传输速率、带宽、传输差错率和时延、信道容量等，工作速率包括传码速率、传信速率，传输差错率包括误码率、误帧率和误组率等，时延主要包括发送时延、传播时延和处理时延。 
+3．衡量数据通信系统性能的指标有传输速率、带宽、传输差错率和时延、信道容量等，工作速率包括传码速率、传信速率，传输差错率包括误码率、误帧率和误组率等，
+时延主要包括发送时延、传播时延和处理时延。 
 
-4．任何信道在传输信号时都存在一个数据传输率的限制，这就是Nyquist（奈奎斯特）定理和Shannon（香农）定理所要告诉我们的结论。
+### 数据传输速率：
+      1. 传码速率（调制速率，波特率）每秒传输信号码元个数
+      2. 传信速率（比特率）每秒传输二进制码元个数
+    **关系：Rb=Nbd*log2(M电平数）=log2（M）/信号码元持续时间**
+### 信号带宽：
+### 时延：
+  **发送时延（传输时延）=数据块长度/信道容量**
+  **传播时延=信道长度/信号传输速率**
+  处理时延
+
+4．任何信道在传输信号时都存在一个数据传输率的限制，即存在最大传输速率。
+### Nyquist（奈奎斯特）准则：理想无噪声，带宽为W赫兹的信道最大传码速率=2W Baud
+### Shannon（香农）定理：有噪声情况下，信噪比(dB)=10*(log10(1+S/N)),该信道的最高数据传输速率=W*(log2(1+S/N))
+S/N=信道内信号与噪声功率之比
 *******
 # 典型例题：
     1
@@ -15,27 +29,31 @@ B.
 正确答案：B你选对了
 2
 假设带宽为3KHz的模拟信道中只存在高斯白噪声，信噪比是20dB，则该信道的最高数据传输速率是
-
-
-A.
-19.98 kbit/s 
+A.19.98 kbit/s 
 正确答案：A你选对了
 3
-若某信道的传码速率为3200 Baud，采用16电平传输，则其传信速率为_______b/s。
-
-12800
-正确答案：12800
-4
-若某信道带宽为5kHz，无噪声，采用8电平传输，则其所能达到的最大的传信速率是           kb/s
-30
-正确答案：30
+若某信道的传码速率为3200 Baud，采用16电平传输，则其传信速率为_12800_b/s
+4若某信道带宽为5kHz，无噪声，采用8电平传输，则其所能达到的最大的传信速率是       30    kb/s
 *********
-5．传输介质包括有线的和无线的两大类，在有线的传输介质中，电磁波沿着固体媒体铜线或光纤向前传播，而无线的传输介质就是指利用大气和外层空间作为传播电磁波的通路。**有线传输介质主要有双绞线、同轴电缆和光缆等，
-    无线传输介质主要包括无线电波、地面微波、卫星微波、红外线等。**
 
-6．为了提高传输介质的利用率，我们可以使用多路复用技术，也就是指在一条信道中传输多路信号的技术。**多路复用技术有频分复用、时分复用、码分复用、波分复用四种**，它们分别用在不同的场合。
+5．传输介质包括有线的和无线的两大类，在有线的传输介质中，电磁波沿着固体媒体铜线或光纤向前传播，而无线的传输介质就是指利用大气和外层空间作为传播电磁波的通路。
+**有线传输介质主要有双绞线、同轴电缆和光缆等，无线传输介质主要包括无线电波、地面微波、卫星微波、红外线等。**
+与多模光纤相比，单模光纤的主要特点是传输距离长、成本高、芯线细
+光纤分为单模光纤和多模光纤。单模光纤纤芯直径很细，光源是激光，带宽很宽，可以长距离传输，价格也更高一些。多模光纤光源是LED，传输距离相对较短。
 
-7．为了提高线路的利用率，用户终端要通过交换网连接起来，**数据交换技术主要包括电路交换、报文交换和分组交换三种**，它们各自有优缺点。
+
+6．为了提高传输介质的利用率，我们可以使用多路复用技术，也就是指在一条信道中传输多路信号的技术。**多路复用技术有频分复用FDM、时分复用TDM、码分复用CDM(m-bit码片序列)、波分复用WDM四种**，
+### 码分复用：假设一个 CDMA 通信系统中，某站点被分配的码片序列为 00011011，则当它发送了比特“0”的时候，实际在信道上传输的数据序列是           。          ,
+正确答案：11100100
+解析： 因为在一个CDMA系统中，每个站点被指定一个唯一的m比特代码或码片序列（chip squence）。当发送比特1时，站点送出的是码片序列，若发送比特0时，站点送出的是该码片序列的反码。
+
+
+
+7．为了提高线路的利用率，用户终端要通过交换网连接起来，**数据交换技术主要包括电路交换、存储转发（报文交换和分组交换）**
+      分组交换|报文交换|电路交换
+      _ | _ | _
+      物理连接实时性强|可以一对多|动态时分复用
+      资源利用率低，无差错控制|时延大|增加开销，实时性差
 
 8．电路交换方式是两台计算机或终端在相互通信之前，预先建立起一条物理连接，也就是实际的物理链路，在通信的过程中自始至终使用该链路进行数据传输，并且不允许其它用户同时共享该链路，通信结束后再拆除该链路。
 
@@ -45,12 +63,23 @@ A.
 
 11． 差错控制的基本思路是：在发送端被传送的信息码序列的基础上，按照一定的规则加入若干“监督码元”后进行传输，这些加入的码元与原来的信息码序列之间存在着某种确定的约束关系。在接收数据时，检验信息码元与
    监督码元之间的既定的约束关系，如该关系遭到破坏，则在接收端可以发现传输中的错误，乃至纠正错误。
-
-12． 纠错编码之所以具有检错和纠错能力，是因为在信息码之外附加了监督码。监督码对于表示信息来说是“冗余”的，但它提高了传输的可靠性。但是，监督
-
-   码的引入，降低了信道的传输效率。一般说来，引入监督码越多，码的检错、纠错能力越强，但信道的传输效率下降也越多。
-
-13．  奇偶校验码是一种最简单的检错码，在计算机数据传输中得到广泛的应用。
-
+差错：
+   1.随机差错 随机单个的
+   2.突发差错  成片连续的
+12． 纠错编码之所以具有检错和纠错能力，是因为在信息码之外附加了监督码。监督码对于表示信息来说是“冗余”的，但它提高了传输的可靠性。但是，监督码的引入，降低了信道的传输效率。一般说来，引入监督码越多，
+码的检错、纠错能力越强，但信道的传输效率下降也越多。
+差错控制方式：
+    1.检错重发
+    2.前向纠错
+    3.混合检错纠错
+    4.信息反馈
+13．  奇偶校验码是一种最简单的检错码，在计算机数据传输中得到广泛的应用。若信息位是0110010，若采用奇校验，则所对应的监督位是 0
+解析： 奇校验是指包括监督位在内，1的个数是奇数个，目前信息位中已经有奇数个1了，所以监督位为0。
+汉明码  纠错码
 14．  循环码是一种线性分组码，即前ｋ是位为信息位，后ｒ位为监督位，它除了具有线性分组码的一般性质外，还具有循环性。循环码是线性分组码中一类重要的码，它是以现代代数理论作为基础建立起来的。
    循环码的检错能力较强，目前在理论和实践上都有较大的发展。
+**原理：比特序列左移生成多项式最高次数位模2除生成多项式的比特序列，余数即为CRC。**只能无差错接受，除了差错控制以外，还必须加上确认和重传机制，才能实现可靠传输，也就是接收端接收的和发送端发送的完全一致。
+# 典型例题：
+ 已知待传输数据M=10011,采用CRC检错，生成多项式=x^3+x^2+1,所得循环冗余码=011
+ 在10011后面补上3个0，也就是用10011000去模二除以1101，最终得到的三位余数011即为所求的循环冗余码。
+ 注：生成多项式最高次数为3
