--- a/Computer-Network/局域网原理与技术.markdown
+++ b/Computer-Network/局域网原理与技术.markdown
@@ -30,9 +30,6 @@ D.
 以太网中，第3次冲突之后，一个节点选择的随机退避系数r的值为4的概率是
 D.
 1/8
-
-2.00/2.00
-正确答案：D你选对了
 解析：  D、本题考查二进制指数退避算法，该算法第N次（不超过10）冲突后，从0, 1, , …, (2N-1)这2^N个整数中随机地选择一个数，记为r。
 本题中第3次冲突，N=3.本题的如可以从[0-7]中随机地选择一个数，所以选择r=4的概率是1/8。
 6单选(2分)
@@ -44,11 +41,11 @@ A.
 目的MAC地址
 解析：  A、当以太网交换机从某个端口收到一个数据帧时，它首先会在转发表中查找目的MAC地址在不在转发表中，如果在，则向目的MAC地址对应的端口转发该帧，若不在，则向除了源端口以外的所有端口转发该帧，以保证无论目的主机在何端口，都能收到该帧。
 ————————————
-集线器|网桥，交换机|路由器
--|-|-
-物理层|数据链路层|网络层
-不能隔离冲突域|能隔离冲突域|能隔离冲突域
-不能隔离广播域|不能隔离广播域|能隔离广播域
+|集线器|网桥，交换机|路由器|
+|-|-|-|
+|物理层|数据链路层|网络层|
+|不能隔离冲突域|能隔离冲突域|能隔离冲突域|
+|不能隔离广播域|不能隔离广播域|能隔离广播域|
 ----------
 (1)所谓冲突域是指在该域内某一时刻只能有一个站点发送数据；如果两个站点同时发送数据会引起冲突，则这两个站点处于同一个冲突域内，网桥的每个端口所连网络构成一个独立的冲突域，
 对于集线器来说，不能隔离冲突域，所以本图中，冲突域是2个。
