--- a/Computer-Network/局域网原理与技术.markdown
+++ b/Computer-Network/局域网原理与技术.markdown
@@ -2,7 +2,7 @@
 若有5台计算机连到了一台10Mbps的集线器上，则每台计算机的平均带宽为
 A.2Mbps 解析：  A、因为通过集线器组成的以太网是一个共享式的局域网，多个用户共享带宽。
 
->>>2下列关于CSMA/CD 协议的叙述中，错误的是
+2下列关于CSMA/CD 协议的叙述中，错误的是
 >>>A.需要根据网络跨距和数据传输速率限定最小帧长
 
 >>>B.边发送数据帧，边检测是否发生冲突
@@ -34,15 +34,10 @@ D.
 本题中第3次冲突，N=3.本题的如可以从[0-7]中随机地选择一个数，所以选择r=4的概率是1/8。
 6单选(2分)
 当以太网交换机对帧进行转发决策时使用的是帧的
-
-得分/总分
-
-A.
 目的MAC地址
 解析：  A、当以太网交换机从某个端口收到一个数据帧时，它首先会在转发表中查找目的MAC地址在不在转发表中，如果在，则向目的MAC地址对应的端口转发该帧，若不在，则向除了源端口以外的所有端口转发该帧，以保证无论目的主机在何端口，都能收到该帧。
-————————————
-|集线器|网桥，交换机|路由器|
 |-|-|-|
+|集线器|网桥，交换机|路由器|
 |物理层|数据链路层|网络层|
 |不能隔离冲突域|能隔离冲突域|能隔离冲突域|
 |不能隔离广播域|不能隔离广播域|能隔离广播域|
