--- a/Computer-Network/局域网原理与技术.markdown
+++ b/Computer-Network/局域网原理与技术.markdown
@@ -14,28 +14,22 @@ A.2Mbps 解析：  A、因为通过集线器组成的以太网是一个共享式
 >>>即IEEE 802.11使用的CSMA/CA协议。
 
 3单选(2分)
-使用集线器的以太网在物理上和逻辑上的拓扑结构分别是
-D.
-星型，总线型
-解析：  D、集线器是早期以太网中的主要连接设备，它工作在OSI体系结构的物理层。从布线方式看，也就是物理上构成的是一个星型的拓扑结构。集线器的主要功能是对接收到的信号进行放大、转发，
-从而扩展以太网的覆盖范围。由于物理层传输的比特流是无结构的，因此集线器无法识别接收方，集线器只能将从一个端口接收到的信号放大后复制到所有其它端口，即向与该集线器连接的所有站点转发。
-因此，使用集线器作为连接设备的以太网仍然属于共享式以太网，集线器连接起来的所有站点共享带宽、属于同一个冲突域和广播域。也就是从实际的工作原理上来看，它是一个总线型的拓扑结构，即逻辑上
-是一个总线型的拓扑结构。
+>>使用集线器的以太网在物理上和逻辑上的拓扑结构分别是星型，总线型
+>>解析：  D、集线器是早期以太网中的主要连接设备，它工作在OSI体系结构的物理层。从布线方式看，也就是物理上构成的是一个星型的拓扑结构。集线器的主要功能是对接收到的信号进行放大、转发，
+>>从而扩展以太网的覆盖范围。由于物理层传输的比特流是无结构的，因此集线器无法识别接收方，集线器只能将从一个端口接收到的信号放大后复制到所有其它端口，即向与该集线器连接的所有站点转发。
+>>因此，使用集线器作为连接设备的以太网仍然属于共享式以太网，集线器连接起来的所有站点共享带宽、属于同一个冲突域和广播域。也就是从实际的工作原理上来看，它是一个总线型的拓扑结构，即逻辑上
+>>是一个总线型的拓扑结构。
 4单选(2分)
-对于100Mbps的以太网交换机，当输出端口无排队，以直通交换方式转发一个以太网帧（不包括前导码及帧开始标志）时，引入的转发延迟至少是
-D.
-0.48 μs
-解析：  D、在直通方式中，交换机收到MAC帧时，不待收完整，就按帧首部中的目的MAC地址来判别转发端口，引入的转发延迟约是6个字节的MAC地址的发送时延，即​0.48 μs
+>>对于100Mbps的以太网交换机，当输出端口无排队，以直通交换方式转发一个以太网帧（不包括前导码及帧开始标志）时，引入的转发延迟至少是0.48 μs
+>>解析：  D、在直通方式中，交换机收到MAC帧时，不待收完整，就按帧首部中的目的MAC地址来判别转发端口，引入的转发延迟约是6个字节的MAC地址的发送时延，即​0.48 μs
 5单选(2分)
-以太网中，第3次冲突之后，一个节点选择的随机退避系数r的值为4的概率是
-D.
-1/8
-解析：  D、本题考查二进制指数退避算法，该算法第N次（不超过10）冲突后，从0, 1, , …, (2N-1)这2^N个整数中随机地选择一个数，记为r。
-本题中第3次冲突，N=3.本题的如可以从[0-7]中随机地选择一个数，所以选择r=4的概率是1/8。
+>>以太网中，第3次冲突之后，一个节点选择的随机退避系数r的值为4的概率是1/8
+>>解析：  D、本题考查二进制指数退避算法，该算法第N次（不超过10）冲突后，从0, 1, , …, (2N-1)这2^N个整数中随机地选择一个数，记为r。
+>>本题中第3次冲突，N=3.本题的如可以从[0-7]中随机地选择一个数，所以选择r=4的概率是1/8。
 6单选(2分)
-当以太网交换机对帧进行转发决策时使用的是帧的
-目的MAC地址
-解析：  A、当以太网交换机从某个端口收到一个数据帧时，它首先会在转发表中查找目的MAC地址在不在转发表中，如果在，则向目的MAC地址对应的端口转发该帧，若不在，则向除了源端口以外的所有端口转发该帧，以保证无论目的主机在何端口，都能收到该帧。
+>>当以太网交换机对帧进行转发决策时使用的是帧的目的MAC地址
+>>解析：  A、当以太网交换机从某个端口收到一个数据帧时，它首先会在转发表中查找目的MAC地址在不在转发表中，如果在，则向目的MAC地址对应的端口转发该帧，若不在，则向除了源端口以外的所有端口转发该帧，
+>>以保证无论目的主机在何端口，都能收到该帧。
 |-|-|-|
 |集线器|网桥，交换机|路由器|
 |物理层|数据链路层|网络层|
