--- a/Computer-Network/局域网原理与技术.markdown
+++ b/Computer-Network/局域网原理与技术.markdown
@@ -1,8 +1,29 @@
+**局域网：基带传输及广播方式为主，不需要考虑路由选择**
+    -拓扑结构：星型，总线型，树型，环型
+
+**媒体访问控制技术：
+  -基于信道划分
+  -基于轮询：令牌环网，令牌总线网
+  -基于随机访问：ALOHA
+    1-持续CSMA
+    非持续CSMA
+    p-持续CSMA
+
+**MAC地址及帧格式：发往本站的帧：unicast,multicast,broadcast
+
+802.3 以太网帧结构
+
+前导码|	帧开始符|	MAC 目标地址	|MAC 源地址	|802.1Q标签(可选)|	以太类型	|负载	|冗余校验FCS	|帧间距
+-|-|-|-|-|-|-|-|
+10101010 7个octet|	10101011 1个octet	|6 octets	|6 octets	|(4 octets)	|2 octets	|46–1500 octets	|4 octets	|12 octets
+
+### 总线式局域网最短有效帧长(以太网中最大帧长)=争用期（冲突窗口,0-2t）(传播时延\*2)\*传输速率
+>>最大有效帧长由最大传输单元MTU确定
 1单选(2分)
 若有5台计算机连到了一台10Mbps的集线器上，则每台计算机的平均带宽为
 A.2Mbps 解析：  A、因为通过集线器组成的以太网是一个共享式的局域网，多个用户共享带宽。
 
-2下列关于CSMA/CD 协议的叙述中，错误的是
+2下列关于CSMA/CD( Carrier Sense Multiple Access/ Collision Detection)协议的叙述中，错误的是
 >>>A.需要根据网络跨距和数据传输速率限定最小帧长
 
 >>>B.边发送数据帧，边检测是否发生冲突
@@ -13,21 +34,29 @@ A.2Mbps 解析：  A、因为通过集线器组成的以太网是一个共享式
 >>>解析：  C、因为无线电波能够向所有的方向传播，并且其传播距离受限，使得在无线局域网不能简单地使用有线局域网的CSMA/CD协议，而是采用了在CSMA基础上增加了冲突避免机制和确认机制，
 >>>即IEEE 802.11使用的CSMA/CA协议。
 
-3单选(2分)
->>使用集线器的以太网在物理上和逻辑上的拓扑结构分别是星型，总线型
+3单选(2分)以太网随机竞争介质控制访问方式
+>>**使用集线器的以太网在物理上和逻辑上的拓扑结构分别是星型，总线型**
 >>解析：  D、集线器是早期以太网中的主要连接设备，它工作在OSI体系结构的物理层。从布线方式看，也就是物理上构成的是一个星型的拓扑结构。集线器的主要功能是对接收到的信号进行放大、转发，
 >>从而扩展以太网的覆盖范围。由于物理层传输的比特流是无结构的，因此集线器无法识别接收方，集线器只能将从一个端口接收到的信号放大后复制到所有其它端口，即向与该集线器连接的所有站点转发。
 >>因此，使用集线器作为连接设备的以太网仍然属于共享式以太网，集线器连接起来的所有站点共享带宽、属于同一个冲突域和广播域。也就是从实际的工作原理上来看，它是一个总线型的拓扑结构，即逻辑上
 >>是一个总线型的拓扑结构。
 
+网桥转发表：源MAC地址，进入网桥端口，进入网桥时间
+
 4单选(2分)
 >>对于100Mbps的以太网交换机，当输出端口无排队，以直通交换方式转发一个以太网帧（不包括前导码及帧开始标志）时，引入的转发延迟至少是0.48 μs
 >>解析：  D、在直通方式中，交换机收到MAC帧时，不待收完整，就按帧首部中的目的MAC地址来判别转发端口，引入的转发延迟约是6个字节的MAC地址的发送时延，即​0.48 μs
+>>以太网交换机转发方式：
+
+直通交换|存储转发|无碎片交换
+-|-|-|
+6B|1518B|64B
 
 5单选(2分)
 >>以太网中，第3次冲突之后，一个节点选择的随机退避系数r的值为4的概率是1/8
->>解析：  D、本题考查二进制指数退避算法，该算法第N次（不超过10）冲突后，从0, 1, , …, (2N-1)这2^N个整数中随机地选择一个数，记为r。
->>本题中第3次冲突，N=3.本题的如可以从[0-7]中随机地选择一个数，所以选择r=4的概率是1/8。
+>>解析：  D、本题考查**二进制指数退避算法**，该算法第N次（不超过10）冲突后，从0, 1, , …, (2N-1)这2^N个整数中随机地选择一个数，记为r。10次之后范围不变均为{0，1，2，……，1023}，16次后为失败
+>>本题中第3次冲突，N=3.本题的如可以从[0-7]中随机地选择一个数，所以选择r=4的概率是1/8。   10Mb/s争用期为51.2微秒，退避时间=数值\*基础争用期
+>>>牺牲时间换取冲突概率减少
 
 6单选(2分)
 >>当以太网交换机对帧进行转发决策时使用的是帧的目的MAC地址
