--- a/Computer-Network/常见协议及其应用.md
+++ b/Computer-Network/常见协议及其应用.md
@@ -6,3 +6,10 @@ RARP
 # ICMP
 ping程序使用了ICMP询问报文中的回送请求与回答报文，去测试网络的连通情况，所以它所基于的协议是ICMP。
 
+
+# CSMA/CA  IEEE802.11(11,11a,11b,11g)
+PCF(point coordination function)点协调功能  
+DCF（distributed coordination function)
+SIFS短帧间间隔28微妙
+PIFS  PCF  78微秒
+DFIS  DCF  128微秒
