--- a/Computer-Network/因特网原理及技术.md
+++ b/Computer-Network/因特网原理及技术.md
@@ -1,9 +1,17 @@
 # 分片重组经典例题：
+
 >一个IP数据报总长度为4200字节（包含固定长度的首部）。现在需要经过某物理网络传送，但是该网络的MTU=1000字节。则该数据报被分片后最后一个分片首部中的片偏移字段的值（用十进制表示）是488
 解析：**因为网络的MTU=1000，则每个分片的数据部分的长度应该选尽量接近1000-20=980、同时又是8字节的整数倍的长度，所以就选择了976字节，那么该IP数据报被分成了5个分片，
 后一个分片数据部分第一个字节的编号是976*4=3904，又因为片偏移字段的单位是8字节，则其首部中片偏移字段的值是3904/8=488。**
+
 >所以最则该数据报被分片后最后一个分片的数据部分的长度是（  276  ）字节。
 解析： 因为网络的MTU=1000，则每个分片的数据部分的长度应该选尽量接近1000-20=980、同时又是8字节的整数倍的长度，所以就选择了976字节，那么该IP数据报被分成了5个分片，
 所以最后一个分片数据部分的长度是4200-20-4*976=276字节。
 
 从理论上来说，一个IPV4数据报的最大长度为65535字节  解析：  A、IP数据报的总长度字段占了16个比特，16比特能够表示的最大值是2^16-1=65535。
+
+**某路由器收到了一个IP分组，根据首部校验和字段对其首部进行校验后发现有错，则该路由器将使用的处理方式是丢弃该IP分组**
+
+6一个IP数据报总长度为4500字节（包含固定长度的首部）。现在需要经过某物理网络传送，但是该网络的MTU=1500字节。则：该IP数据报应当被划分为（  4     ）个短些的数据报片。
+一个IP数据报总长度为4500字节（包含固定长度的首部）。现在需要经过某物理网络传送，但是该网络的MTU=1500字节。则：经过分片后，该IP数据报**最后一个分片数据部分的长度是（  40     ）字节。**
+一个IP数据报总长度为4500字节（包含固定长度的首部），现在需要经过某物理网络传送，但是该网络的MTU=1500字节。则：经过分片后，该IP数据报最后一个分片首部中的片偏移量是（  555     ）（用十进制来表示）。
