--- a/Computer-Network/因特网原理及技术.md
+++ b/Computer-Network/因特网原理及技术.md
@@ -15,3 +15,40 @@
 6一个IP数据报总长度为4500字节（包含固定长度的首部）。现在需要经过某物理网络传送，但是该网络的MTU=1500字节。则：该IP数据报应当被划分为（  4     ）个短些的数据报片。
 一个IP数据报总长度为4500字节（包含固定长度的首部）。现在需要经过某物理网络传送，但是该网络的MTU=1500字节。则：经过分片后，该IP数据报**最后一个分片数据部分的长度是（  40     ）字节。**
 一个IP数据报总长度为4500字节（包含固定长度的首部），现在需要经过某物理网络传送，但是该网络的MTU=1500字节。则：经过分片后，该IP数据报最后一个分片首部中的片偏移量是（  555     ）（用十进制来表示）。
+
+# 子网编址: IP=[network-id, subnet-id, host-id]  子网掩码mask=（网络号+子网号全1） + 主机号全0   子网地址=IP & mask   默认子网掩码  网络地址(主机号全0）广播地址(主机号全1)
+CIDR(classless inner-domain routing)
+
+
+>**在RIP协议中，交换路由信息的方式是向邻居节点广播整个路由表,在RIP中，当前路由器会定时同邻居路由器去交换路由信息，且倾其所有，也就是把自己路由表中的所有信息都去和邻居交换。
+OSPF洪泛法向自治系统所有路由器发送发送信息**
+
+
+### 因特网路由协议   路由器:路由选择和分组转发(直接交付，间接交付)   自治系统AS
+
+RIP|OSPF|BGP
+-|-|-|
+IGP|IGP|EGP
+距离向量最大跳数为15|链路状态向量算法|路径向量路由协议
+UDP|IP|TCP
+
+# 专用网络互连  VPN：隧道传输+加密技术    NAT(地址转换协议)（返回时使用,从全球地址变为本地地址)  内部网络:10/8   172.16/12 192.168/16
+
+# IPV6   128bit  双协议栈+隧道传输  unicast, multicast, anycast(最近一个)  例如：IPv6地址1002::5:100F中的::代表的比特位0的个数是80  zero compression只能使用一次
+
+# 基础例题:
+1
+设有一个网络地址为202.16.10.0，若子网掩码为255.255.255.224，则可以划分子网（全0、全1的子网地址不分配）的个数是6
+
+>某主机的IP地址是192.168.34.38，所在子网的子网掩码是255.255.255.224，则该子网的子网地址是192.168.34.32
+
+>在一个CIDR地址块202.15.64.0/21中，最大的IP地址为202.15.71.255
+
+>设有一个网络地址为172.16.0.0，若子网掩码为255.255.255.192，每个子网可以容纳（   62  ）台有效主机。
+
+>在一个192.168.34.0的网络中，子网掩码是255.255.255.192，**若全0和全1的子网地址不分配**，按照从小到大的顺序，第一个子网的子网地址是（192.168.34.64)
+
+
+**在一个CIDR地址块202.15.64.0/22中，包含有（1024      ）个IP地址,分配给主机使用的有1024-2=1022个IP地址**
+
+>212.10.4.0/24, 212.10.5.0/24,  212.10.6.0/24, 212.10.7.0/24 汇聚后的网络地址为（ 212.10.4.0/22    ）。
