--- a/Computer-Network/常见协议及其应用.md
+++ b/Computer-Network/常见协议及其应用.md
@@ -13,3 +13,21 @@ DCF（distributed coordination function)
 SIFS短帧间间隔28微妙
 PIFS  PCF  78微秒
 DFIS  DCF  128微秒
+
+# 网络基本服务
+
+1.DNS：如果本地域名服务器无缓存，当采用**递归方法**解析另一网络某主机域名时，**用户主机和本地域名服务器发送的域名请求条数分别为1条，1条** 
+解析：  B、根据域名解析的基本原理，当采用递归方法进行解析时，用户主机先发出一条域名解析请求给本地域名服务器，本地的域名服务器再向某个顶级域名服务器发送一条请求，然后对于用户主机和本地域名服务器来说，剩下的事情就是等待返回解析结果。
+
+如果本地域名服务器无缓存，当采用**递归和迭代相结合的方法**解析另一网络某主机域名时，**用户主机和本地域名服务器发送的域名请求条数分别为1条，多条**
+解析：  D、根据域名解析的基本原理，当采用递归和迭代相结合的方法进行解析时，用户主机先发出一条域名解析请求给本地域名服务器，本地域名服务器再向ROOT域名服务器发送一条请求，然后ROOT域名服务器会返回一个顶级域名服务器的地址，本地域名服务器再向该顶级域名服务器发送一条域名解析的请求，也就是说对于用户主机来说，只发出一条请求，对于本地域名服务器来说，至少发出两条请求。
+2.Telnet:  NVT(Net Virtual Terminal) e.g: telnet www.google.com
+3.FTP: 数据连接(20) 控制连接(熟知端口21)
+4.DHCP: 动态主机配置协议(IP地址，子网掩码，默认路由器的IP地址，域名服务器的IP）  C/S模式  中继代理
+5.EMail:  SMTP --> SMTP(simple mail transfer protocol) --->POP3
+6.WWWW: URL HTTP
+
+
+
+
+
