--- a/Algorithms/算法第一周.md
+++ b/Algorithms/算法第一周.md
@@ -58,3 +58,18 @@ When opening one new site in the percolation simulation, how many times is union
 
 正确 
 It is called for each neighboring site that is already open. There are 4 possible neighbors, but some of them may not already be open
+
+# ALlgorithm Analysis
+
+Suppose that nn equals 1 million. Approximately how much faster is an algorithm that performs n \lg nnlgn operations versus one that performs n^2n 
+2
+  operations? Recall that \lglg is the base-2 logarithm function.
+
+50,000x
+
+正确 
+{n^2} \;/\; (n \lg n) \;=\; n \; /\; \lg n \;= n 
+2
+ /(nlgn)=n/lgn= 1,000,000 / lg(1,000,000). Since 2^{20}2 
+20
+  is approximately 1 million, we obtain approximately 50,000.
