--- a/Algorithms/算法第一周.md
+++ b/Algorithms/算法第一周.md
@@ -73,3 +73,25 @@ Suppose that nn equals 1 million. Approximately how much faster is an algorithm 
  /(nlgn)=n/lgn= 1,000,000 / lg(1,000,000). Since 2^{20}2 
 20
   is approximately 1 million, we obtain approximately 50,000.
+
+Suppose that you make the following observations of the running time T(n)T(n) (in seconds) of a program as a function of the input size nn. Which of the following functions best models the running time T(n)T(n)?
+
+n	T(n)
+1,000	0.0
+2,000	0.0
+4,000	0.1
+8,000	0.3
+16,000	1.3
+32,000	5.1
+64,000	20.5
+
+We assume T(n) = a \, n^bT(n)=an 
+b
+  for some constants aa and bb.
+
+As we double the input size nn, the running time approximately quadruples, indicating a quadratic algorithm or b = 2b=2. Plugging in T(64000) = 20.5T(64000)=20.5 and solving for aa, we obtain a = 20.5 / 64000^2 \approx 5.0 \times 10^{-9}a=20.5/64000 
+2
+ ≈5.0×10 
+−9
+ .
+
