--- a/Algorithms/算法第一周.md
+++ b/Algorithms/算法第一周.md
@@ -95,3 +95,31 @@ As we double the input size nn, the running time approximately quadruples, indic
 −9
  .
 
+How many array accesses does the following code fragment make as a function of nn?
+
+(Assume the compiler does not optimize away any array accesses in the innermost loop.)
+
+
+
+\sim 3n^2∼3n 
+2
+ 
+
+
+\sim \frac{3}{2} n^2 \lg n∼ 
+2
+3
+​	 n 
+2
+ lgn
+
+正确 
+Not all triple loops have cubic running times. For a given value of ii and jj, the kk-loop requires only 3 \lg n3lgn array access: the body is executed \lg nlgn times and each time involves 3 array accesses. As in the 2-SUM and 3-SUM analysis, the number of times the kk-loop is executed is {n \choose 2} \sim \frac{1}{2} n^2( 
+2
+n
+​	 )∼ 
+2
+1
+​	 n 
+2
+ .
