--- a/Awesome_Websites/程序猿博客.md
+++ b/Awesome_Websites/程序猿博客.md
@@ -1,3 +1,5 @@
 1.[Python，数据科学，文本分析](https://marcobonzanini.com "Python，数据科学，文本分析")
 
 2.[建站起飞页](https://www.qifeiye.com/ "建站起飞页")
+
+3.[52nlp](http://www.52nlp.cn/)
