--- a/Awesome_Websites/翻墙指南.md
+++ b/Awesome_Websites/翻墙指南.md
@@ -1,1 +1,7 @@
-[shadowsocks-share](https://github.com/zc-zh-001/ShadowSocks-Share)
+[shadowsocks-share-github](https://github.com/zc-zh-001/ShadowSocks-Share)
+
+[vpnmentor](https://www.vpnmentor.com/)
+
+[expressvpn](https://www.expressvpn.com/)
+
+[wizcase](https://zh.wizcase.com)
