--- a/East-of-Eden/体检推荐.md
+++ b/East-of-Eden/体检推荐.md
@@ -73,6 +73,96 @@
 说实在的，没有不好的体检项目，只有不恰当的推荐。
 
 以下内容来自「丁香医生」www.dxy.com
+送给妈妈最好的礼物就是健康。随着年纪的增长，母亲的身体也在慢慢变化。作为儿女，带妈妈去做一个全面的妇科检查，是最好的礼物。年轻的母亲，也可以把体检作为给自己的礼物。
+
+什么是妇科检查？
+一般妇科检查包括乳腺检查、子宫及附件检查、外阴部检查、宫颈检查和阴道检查。妇科检查可以帮助女性尽早的发现疾病，以便及早确诊和开始治疗，不会出现患病后错过最佳治疗时间的情况。因此，女性做妇科检查是非常必要的。
+
+妇科检查的最佳时间
+
+
+1. 每次年度妇科检查，应该安排在女性月经周期的合适时间里，一般最合适时间是在当月月经结束之后的 3-7 天，此时是做宫颈刮片检查的最佳时间，因为你此时宫颈口最扩张，方便检查。
+
+2. 如果精确的计划时间对你来说有困难的话，只需确保检查时你不在月经期，并且月经已经结束至少数天，这样你阴道中的分泌物就不会干扰检查效果。
+
+
+
+3. 如果你已年满 20 岁，就需要每年进行一次妇检。
+
+
+
+作者：丁香医生 ，未经许可请勿转载。查看原文：https://dxy.com/column/1614
+以下内容来自「丁香医生」www.dxy.com
+一般妇科检查都检查哪些项目？
+1. 体格检查：
+
+包括对外阴、阴道、宫颈以及子宫的大小、形态、位置以及输卵管、卵巢的检查的触诊和视诊。
+
+2. 白带常规的检查：
+
+包括霉菌、滴虫、阴道清洁度及细菌性阴道病检查。
+
+3. 妇科 B 超检查：
+
+可以发现子宫内膜疾病、宫颈疾病、子宫肌瘤、卵巢肿瘤。
+
+4. 宫颈刮片或 TCT 检查：
+
+宫颈刮片和 TCT 检查可以发现宫颈早期病变，是早发现、早治疗宫颈癌的主要方法。技术上来说，TCT 比宫颈刮片更准确，异常细胞的检出率更高。
+
+5. 乳腺检查：
+
+除了由专科医生进行乳腺的视诊和触诊外，乳腺钼靶检查可以发现触诊发现不了的乳腺内病变。
+
+6. 确认月经是否正常：
+
+如果月经不规则，可能提示女性到了围绝经期，或者是一些肿瘤的早期症状。需要及时发现月经不规律的原因，以便对症治疗。
+
+
+
+检查前注意事项
+
+
+体检的时候除了妇科检查的项目，还会包含对身体其他系统器官的检查。做体检之前有以下注意事项：
+
+1. 抽血检查的前一天晚上 12 点之后不要吃东西、不要大量喝水，直到完成抽血检查。
+
+2. 体检之前可以用清水擦洗外阴，但不要进行阴道冲洗。
+
+3. 做妇科检查要排空小便。
+
+5. 未婚的女性不能进行经阴道的妇科B超检查；从腹部做妇科B超需要憋尿。
+
+4. 做肝、胆、胰 B 超一般要求空腹。
+
+6. 在拍 X 光片时，身上尽量不要有金属的首饰，衣服上也不要带金属的装饰品，以免影响检查结果。
+
+7. 做心电图检查需要露出手腕和脚腕，女性尽量不要穿长筒袜、连裤袜等，以减少不便。
+
+作者：丁香医生 ，未经许可请勿转载。查看原文：https://dxy.com/column/1614
+
+以下内容来自「丁香医生」www.dxy.com
+哪些现象表示要进行妇科检查了 
+1. 过度精神紧张
+
+经前紧张综合征，主要是由内分泌不调引起的神经系统功能紊乱，一般情况下，可通过自我调节得到缓解。如长期处于紧张状态，并伴有较重生理反应时，可到妇科进行内分泌检查，必要时在医生的指导下，口服激素药物治疗。
+
+2. 剧烈疼痛
+
+痛经和性交痛，是女性常会面临的问题，尤其是痛经。一般程度的痛经，属于可以忍受的范围。而对于长期难以忍受的痛经，不该一味吃止疼片忍耐，应去做一下妇科内分泌检查，看看是否患有子宫内膜异位症。
+
+3. 月经过多
+
+月经过多，是由多种原因引起的，子宫肌瘤便是重要因素之一。子宫肌瘤与雌激素水平有着密切关系。此外，黄体功能不良也可导致月经量过多。
+
+4. 阴道瘙痒反复发作
+
+对不明原因长期、反复发作的阴道瘙痒，需要考虑内分泌因素，进行内分泌检查。不找到问题的根源，盲目使用药物，不仅不能治本，反会导致耐药性，引发慢性疾病。
+
+
+
+作者：丁香医生 ，未经许可请勿转载。查看原文：https://dxy.com/column/1614
+以下内容来自「丁香医生」www.dxy.com
 无论何种检查，都是循序渐进的过程：从简单、无创、廉价到复杂、有创、昂贵。
 
 如果一开始就做昂贵的检查，除了被坑之外，还有一种可能是：医生认为你是某种癌症的「高危人群」，有必要这样检查。
