--- a/Awesome_Websites/翻墙指南.md
+++ b/Awesome_Websites/翻墙指南.md
@@ -8,6 +8,6 @@
 
 [Internet of People](https://github.com/Internet-of-People)     [iop-blockchain](https://github.com/Internet-of-People/iop-blockchain)
 
-[IPFS](https://ipfs.io/)      [IPFS-github](https://github.com/miaoski/ipfs-tutorial)
+[IPFS](https://ipfs.io/)      [IPFS-github](https://github.com/miaoski/ipfs-tutorial)   [ipfs-github](https://github.com/ipfs/ipfs)
 
 
