--- a/Awesome_Websites/程序猿博客.md
+++ b/Awesome_Websites/程序猿博客.md
@@ -3,3 +3,7 @@
 2.[建站起飞页](https://www.qifeiye.com/ "建站起飞页")
 
 3.[52nlp](http://www.52nlp.cn/)
+
+[红色石头](http://redstonewill.com/)
+
+[devops](https://devopshub.cn/)
