--- a/Awesome_Websites/翻墙指南.md
+++ b/Awesome_Websites/翻墙指南.md
@@ -11,3 +11,11 @@
 [IPFS](https://ipfs.io/)      [IPFS-github](https://github.com/miaoski/ipfs-tutorial)   [ipfs-github](https://github.com/ipfs/ipfs)
 
 [DownloadAtoZ](https://www.downloadatoz.com)
+
+[routevpn](https://www.routevpn.com)
+
+[古歌云](https://sctob.cf/)
+
+[hosteons](http://uee.me/aErP4)
+
+[onevps](https://www.onevps.com/)
