--- a/Awesome_Websites/翻墙指南.md
+++ b/Awesome_Websites/翻墙指南.md
@@ -1,3 +1,5 @@
+# [免费账号](https://free-ss.site/)
+
 [shadowsocks-share-github](https://github.com/zc-zh-001/ShadowSocks-Share)
 
 [vpnmentor](https://www.vpnmentor.com/)
@@ -19,3 +21,17 @@
 [hosteons](http://uee.me/aErP4)
 
 [onevps](https://www.onevps.com/)
+
+[bighead](https://www.datou520.com/)
+
+[Heroku](https://github.com/onplus/shadowsocks-heroku/tree/re)  [原版本](https://github.com/mrluanma/shadowsocks-heroku)
+
+[泡芙云](https://www.puffss.me/)
+
+[OVH-VPS](https://www.ovh.com)
+
+[vps-server](https://www.vpsserver.com/)
+
+[vps-net](https://www.vps.net/)
+
+[V2ray](https://www.v2ray.com/]   [github-v2ray](https://github.com/v2ray)  [GUI-v2ray-github](https://github.com/2dust/v2rayN/releases)
