--- a/Awesome_Websites/翻墙指南.md
+++ b/Awesome_Websites/翻墙指南.md
@@ -34,4 +34,6 @@
 
 [vps-net](https://www.vps.net/)
 
-[V2ray](https://www.v2ray.com/]   [github-v2ray](https://github.com/v2ray)  [GUI-v2ray-github](https://github.com/2dust/v2rayN/releases)
+[V2ray](https://www.v2ray.com/)  [github-v2ray](https://github.com/v2ray)  [GUI-v2ray-github](https://github.com/2dust/v2rayN/releases)
+
+[ssr](https://github.com/shadowsocksrr/shadowsocksr-csharp/)    [镜像](https://www.mide.ml/tool/free_ssr)    [ssrtools等节点大全](https://www.ssrtool.com)
