--- a/Awesome_Websites/程序猿博客.md
+++ b/Awesome_Websites/程序猿博客.md
@@ -4,6 +4,10 @@
 
 3.[52nlp](http://www.52nlp.cn/)
 
-[红色石头](http://redstonewill.com/)
+4.[红色石头](http://redstonewill.com/)
 
-[devops](https://devopshub.cn/)
+5.[devops](https://devopshub.cn/)
+
+6.[generating-C-code](https://jonathan.protzenko.fr)
+
+7.
