--- a/Awesome_Websites/助学金申请.md
+++ b/Awesome_Websites/助学金申请.md
@@ -1,30 +1,12 @@
-Dear reviewers, I am a student from China who has no income yet.
-As time goes by, online courses have become more and more important in my daily life. 
-For students who could hardly obtain the chances to get access to specific series courses like deeplearning.ai's Specialization or those who are tired campus classes' low quality, 
-online courses offered by top universities around the world via coursera are no doubt a great treasure. Despite the high quality of the all kinds of online courses, 
-the corresponding fee requested for participating these curriculum are related unaffordable for students who has been living in mainland China and 
-get no financial support except modicum money from home. Under these conditions, the financial aid offered by official coursera is especially precious. 
-What's more, the coursera courses that I have already taken really helps me a lot during my campus life. 
-One of the course series that I participated in called Neural Networks and Deep Learning offered by Andrew Ng, 
-not only bring me tons of knowledge needed for the DL introduction classes in college but also took me into the new area of computer science that I have never been to : 
-Deep learning. This time,I would like to keep on applying for this series of classes.
-I guarantee the independence while completing these courses, to ensure that all academic tasks are independently finished by myself!
+Dear reviewers, I am a student from China who has no income yet. As time goes by, online courses have become more and more important in my daily life. For students who could hardly obtain the chances to get access to specific series courses like this Specialization or those who are tired campus classes' low quality, online courses offered by top universities around the world via coursera are no doubt a great treasure. Despite the high quality of all kinds of online courses, the corresponding fee requested for participating these curriculums is related unaffordable for students who has been living in mainland China and get no financial support except modicum money from home. Under these conditions, the financial aid offered by official coursera is especially precious. What's more, the coursera courses that I have already taken really helps me a lot during my campus life. One of the course series that I participated in called Machine Learning Regression, not only bring me tons of knowledge needed for the ML introduction classes in college but also took me into the new area of computer science that I have never been to Machine learning. This time, I would like to keep on applying for this series of classes. I guarantee the independence while completing these courses, to ensure that all academic tasks are independently finished by myself!
 
 
 ----------------------------------
 
-The full name of the this course is 'Neural Networks and Deep Learning', which belongs to a specific series of courses called 'Deep Learning Specialization.'. 
-As the name of the courses suggest, it is a series of courses opened for those who would like to know more about the secret of deep learning. 
-As I am an college student major in computer science, it is not that difficult for me to handle those coding works. I wanna be a master of Deep Learning. 
-Fortunately,I found these courses in coursera which exactly fits me.  The series of courses shows its necessity. 
-Besides,the courses opened by deeplearning.ai could also play an significant role in leading me further in the field of deep learning.
-It definitely will help me in improving myself in the career of data science and make it a lot easier for me the dig into the profound domain of deep learning.
+The full name of this course is 'Machine Learning: Regression', which belongs to a specific series of courses called 'Machine Learning Specialization.'. As the name of the courses suggests, it is a series of courses opened for those who would like to know more about the secret of machine learning. As I am a college student major in computer science, it is not that difficult for me to handle those coding works. I wanna be a master of Machine Learning. Fortunately, I found these courses in coursera which exactly fits me. The series of courses shows its necessity. Besides, the courses opened by  University of Washington could also play a significant role in leading me further in the field of machine learning. It definitely will help me in improving myself in the career of data science and make it a lot easier for me the dig into the profound domain of machine learning.
 
 
 -------------------------------------
 
-Owing to the Trade War between US and China,  my family will face   harder  financial situation in the next years. 
-I have already had some student loans from the government.And I might be willing to take some loans if I don't have a good income in my internship this year. 
-There might no extra money for this whole courses I want to learn in this platform.  
-As long as I get my own income, I will pay those courses  because I am tremendously changed by those courses.  I am quiet sure that I will keep learning in Coursera in the future.
-Thanks for your support, I really appreciate to your effort.
+Owing to the Trade War between the US and China, my family will face a harder financial situation in the next years. I have already had some student loans from the government. And I might be willing to take some loans if I don't have a good income in my internship this year. There might no extra money for this whole courses I want to learn on this platform.
+As long as I get my own income, I will pay those courses because I am tremendously changed by those courses. I am quite sure that I will keep learning in Coursera in the future. Thanks for your support, I really appreciate  your effort
