--- a/Digit-Logical-Design/二进制编码方案.md
+++ b/Digit-Logical-Design/二进制编码方案.md
@@ -1,14 +1,14 @@
 # 1.BCD(binary coded decimal) 二-十进制转换
 
 **十进制数每位由四位二进制数表示,带有权值**  
-- 8421BCD
+- 8421BCD    表示范围为0-9
 - 4221BCD
 - 2421BCD
 - etc.
 
 # 2.余3码(excess 3 code)=8421BCD+3(0011)
 
-**无权码,自补码**
+**无权码,自补码**  表示范围为3-12
 
 # 3.典型Gray Code=二进制形式最高位保留，相邻位进行异或运算算作下一位
 
