--- a/Digit-Logical-Design/逻辑代数基础.md
+++ b/Digit-Logical-Design/逻辑代数基础.md
@@ -26,3 +26,10 @@ ACD’+BE
 (A+B+C’)( A+B+C)( A’+B’+C’) ）。
 
 10.利用公式化简法将逻辑函数表达式 AC’+ABC+ACD’+CD，化简为最简与或式的结果是（  A+CD ）。
+
+
+
+用卡诺图可判断出逻辑函数F(ABCD)=B'D'+A'D'+C'D'+ACD',与逻辑函数G(ABCD)=B'D+CD+A'C'D+ABD互为反函数。
+
+逻辑函数的卡诺图是唯一的。逻辑函数的标准与或式是唯一的。
+
