--- a/C/数据类型.md
+++ b/C/数据类型.md
@@ -1,1 +1,3 @@
 # 
+
+![第一周知识点小结](https://www.icourse163.org/learn/HIT-69005?tid=1003059003#/learn/content?type=detail&id=1004295174&cid=1005335486)
