--- a/Awesome_Websites/翻墙指南.md
+++ b/Awesome_Websites/翻墙指南.md
@@ -1,4 +1,6 @@
-# [免费账号](https://free-ss.site/)         [TopVPN-Software](https://topvpnsoftware.com/)
+# [免费账号](https://free-ss.site/)      [free-ss-github](  https://github.com/max2max/freess)
+
+[TopVPN-Software](https://topvpnsoftware.com/)
 
 [shadowsocks-share-github](https://github.com/zc-zh-001/ShadowSocks-Share)
 
