--- a/Computer-System/乘除及浮点数运算.md
+++ b/Computer-System/乘除及浮点数运算.md
@@ -24,6 +24,21 @@ D.
 
 ![浮点数](https://upload-images.jianshu.io/upload_images/9379599-8dd5485ed36ba870.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/695/format/webp)
 
+第1位表示正负，中间8位表示指数，后23位储存有效数位（有效数位是24位）。
+
+第一位的正负号0代表正，1代表负。
+
+中间八位共可表示28=256个数，指数可以是二补码；或0到255，0到126代表-127到-1，127代表零，128-255代表1-128。
+
+有效数位最左手边的1并不会储存，因为它一定存在（二进制的第一个有效数字必定是1）。换言之，有效数位是24位，实际储存23位。
+
+![simplex-precision-float](https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Float_example.svg/590px-Float_example.svg.png)
+
+{\displaystyle {\text{sign}}=+1} {\displaystyle {\text{sign}}=+1}
+{\displaystyle {\text{exponent}}=(-127)+124=-3} {\displaystyle {\text{exponent}}=(-127)+124=-3}
+{\displaystyle {\text{fraction}}=1+2^{-2}=1.25} {\text{fraction}}=1+2^{{-2}}=1.25
+{\displaystyle {\text{value}}=(+1)\times 1.25\times 2^{-3}=+0.15625} {\displaystyle {\text{value}}=(+1)\times 1.25\times 2^{-3}=+0.15625}
+
 ### 1单选 (0.5分)
 若在一个8 位计算机中完成x+2y 的运算，假定变量x 和y 的机器数用补码表示为[x] 补=44H ，[y] 补= DCH ，则x+2y 的机器数及相应的溢出标志OF 分别是（）。    
 
