--- a/Computer-System/乘除及浮点数运算.md
+++ b/Computer-System/乘除及浮点数运算.md
@@ -39,6 +39,46 @@ D.
 {\displaystyle {\text{fraction}}=1+2^{-2}=1.25} {\text{fraction}}=1+2^{{-2}}=1.25
 {\displaystyle {\text{value}}=(+1)\times 1.25\times 2^{-3}=+0.15625} {\displaystyle {\text{value}}=(+1)\times 1.25\times 2^{-3}=+0.15625}
 
+指数
+
+类比整数使用所有位为 0 的数字表示数值“0”，双精度浮点数表示 0 时指数部分也为 0。若如此，便可能产生冲突：比如全 0 的数字可能表示“0”，也可能表示 {\displaystyle {\text{1}}\times {\text{2}}^{0}{\text{= 1}}} {\text{1}}\times {\text{2}}^{{0}}{\text{= 1}}（参考下文“尾数”的解释）。于是此处规定：
+
+{\displaystyle {\text{000}}_{16}} {\displaystyle {\text{000}}_{16}}：用来代表带符号的 0（尾数为 0）或下溢数（尾数不为 0）。
+{\displaystyle {\text{7ff}}_{16}} {\displaystyle {\text{7ff}}_{16}}：用来代表无穷大（尾数为 0）或NaN（尾数不为 0）。
+其他：代表 2 的（exponent-0x3ff）次方。
+
+尾数
+
+在二进制的“科学记号”，数字被表示为：
+
+{\displaystyle {\text{Mantissa}}\times {\text{2}}^{\text{exponent}}} {\text{Mantissa}}\times {\text{2}}^{{\text{exponent}}}
+
+为了最大限度提高精确度，可以要求尾数规范化，把尾数处理到大于等于1而小于2的区间内，便可省去前述的“1”。例如：
+
+ 二進位制的  
+  
+    
+    {\displaystyle {\text{11.101}}\times {\text{2}}^{\text{1001}}}
+  
+{\text{11.101}}\times {\text{2}}^{{\text{1001}}} 可以規格化為 
+  
+    
+    {\displaystyle {\text{1.1101}}\times {\text{2}}^{\text{1010}}}
+  
+{\text{1.1101}}\times {\text{2}}^{{\text{1010}}}，存儲存尾数只需要儲存1101即可
+ 二進位制的  
+  
+    
+    {\displaystyle {\text{0.00110011}}\times {\text{2}}^{\text{-1001}}}
+  
+{\text{0.00110011}}\times {\text{2}}^{{\text{-1001}}} 可以規格化為 
+  
+    
+    {\displaystyle {\text{1.10011}}\times {\text{2}}^{\text{-1100}}}
+  
+{\text{1.10011}}\times {\text{2}}^{{\text{-1100}}}，儲存時尾數只需要儲存10011即可
+于是，可得以下形式： {\displaystyle {\text{1.mantissa}}\times {\text{2}}^{\text{exponent}}} {\text{1.mantissa}}\times {\text{2}}^{{\text{exponent}}}
+
 ### 1单选 (0.5分)
 若在一个8 位计算机中完成x+2y 的运算，假定变量x 和y 的机器数用补码表示为[x] 补=44H ，[y] 补= DCH ，则x+2y 的机器数及相应的溢出标志OF 分别是（）。    
 
