--- a/Computer-System/IA-32指令系统概述.md
+++ b/Computer-System/IA-32指令系统概述.md
@@ -31,63 +31,66 @@ D.
 得分/总分
 
 A.
-伪指令是由若干条机器指令构成的一个指令序列，属于软件范畴
-
-
-B.
-机器指令是用二进制表示的一个0/1序列，CPU能直接执行
-
-
-C.
 微指令是一条机器指令所包含的控制信号的组合，CPU能直接执行
 
 
-D.
+B.
 汇编指令是机器指令的符号表示，CPU能直接执行
 
 0.50/0.50
+
+C.
+机器指令是用二进制表示的一个0/1序列，CPU能直接执行
+
+
+D.
+伪指令是由若干条机器指令构成的一个指令序列，属于软件范畴
+
+正确答案：B你选对了
 2单选(0.5分)
 一条机器指令通常由多个字段构成。以下选项中，通常（    ）不显式地包含在机器指令中。
 
 得分/总分
 
 A.
-寄存器编号
-
-
-B.
 下条指令地址
 
 0.50/0.50
+
+B.
+操作码
+
 
 C.
 寻址方式
 
 
 D.
-操作码
+寄存器编号
 
+正确答案：A你选对了
 3单选(0.5分)
 对于运算类指令或传送类指令，需要在指令中指出操作数或操作数所在的位置。通常，指令中指出的操作数不可能出现在（   ）中。
 
 得分/总分
 
 A.
-通用寄存器
+存储单元
 
 
 B.
-指令
-
-
-C.
 程序计数器
 
 0.50/0.50
 
-D.
-存储单元
+C.
+通用寄存器
 
+
+D.
+指令
+
+正确答案：B你选对了
 4单选(0.5分)
 令集体系结构（ISA）是计算机系统中必不可少的一个抽象层，它是对硬件的抽象，软件通过它所规定的指令系统规范来使用硬件。以下有关ISA的叙述中，错误的是（    ）。
 
@@ -99,89 +102,92 @@ A.
 0.50/0.50
 
 B.
- ISA规定了指令获取操作数的方式，即寻址方式
-
-
-C.
  ISA规定了指令的操作数类型、寄存器结构、存储空间大小、编址方式和大端/小端方式
 
 
-D.
+C.
  ISA规定了所有指令的集合，包括指令格式和操作类型
 
+
+D.
+ ISA规定了指令获取操作数的方式，即寻址方式
+
+正确答案：A你选对了
 5单选(0.5分)
 以下选项中，不属于指令集体系结构名称的是（    ）。
 
 得分/总分
 
 A.
+MIPS
+
+
+B.
 UNIX
 
 0.50/0.50
 
-B.
-ARM
-
-
 C.
-MIPS
+ARM
 
 
 D.
 IA-32
 
+正确答案：B你选对了
 6单选(0.5分)
 以下Intel微处理器中，不兼容IA-32指令集体系结构的是（    ）。
 
 得分/总分
 
 A.
-Itanium和Itanium 20.50/0.50
-
-B.
-Pentium (II、III、4)     
-
-
-C.
 80386和80486
 
 
-D.
+B.
+Itanium和Itanium 20.50/0.50
+
+C.
 Core(i3、i5、i7)
 
+
+D.
+Pentium (II、III、4)     
+
+正确答案：B你选对了
 7单选(0.5分)
 以下关于IA-32指令格式的叙述中，错误的是（   ）。
 
 得分/总分
 
 A.
-采用变长操作码，操作码位数可能是5位到十几位不等
+指令中指出的位移量和立即数的长度可以是0、1、2或4个字节
 
 
 B.
+采用变长指令字格式，指令长度从一个字节到十几个字节不等
+
+
+C.
 指令中给出的操作数所在的通用寄存器的宽度总是32位
 
 0.50/0.50
 
-C.
-采用变长指令字格式，指令长度从一个字节到十几个字节不等
-
-
 D.
-指令中指出的位移量和立即数的长度可以是0、1、2或4个字节
+采用变长操作码，操作码位数可能是5位到十几位不等
 
+正确答案：C你选对了
 8单选(0.5分)
 以下关于IA-32指令寻址方式的叙述中，错误的是（    ）。
 
 得分/总分
 
 A.
-对于寄存器操作数，必须在指令中给出通用寄存器的3位编号
+操作数可以是指令中的立即数、也可以是通用寄存器或存储单元中的内容
 
-0.00/0.50
 
 B.
-操作数可以是指令中的立即数、也可以是通用寄存器或存储单元中的内容
+对于寄存器操作数，必须在指令中给出通用寄存器的3位编号
 
 
 C.
@@ -191,38 +197,41 @@ C.
 D.
 存储器操作数中最复杂的寻址方式是“基址加比例变址加位移”
 
+0.00/0.50
+正确答案：C你错选为D
 9单选(0.5分)
 以下关于IA-32中整数运算指令所支持的操作数的叙述中，错误的是（    ）。
 
 得分/总分
 
 A.
-对于加减运算指令，操作数不区分是无符号整数还是带符号整数
+除乘法指令外，其他运算指令的源操作数和目的操作数的位数相等
 
+0.50/0.50
 
 B.
-除乘法指令外，其他运算指令的源操作数和目的操作数的位数相等
+对于加减运算指令，操作数不区分是无符号整数还是带符号整数
 
 
 C.
 对于乘除运算指令，操作数一定区分是无符号整数还是带符号整数
 
-0.00/0.50
 
 D.
 参加运算的操作数可以是一个字节（8b）、一个字（16b）或双字（32b）
 
+正确答案：A你选对了
 10单选(0.5分)
 以下关于IA-32的定点寄存器组织的叙述中，错误的是（   ）。
 
 得分/总分
 
 A.
-EIP/IP为指令指针寄存器，即PC；EFLAGS/FLAGS为标志寄存器
+寄存器EAX/AX/AL称为累加器，ECX/CX/CL称为计数寄存器
 
 
 B.
-寄存器EAX/AX/AL称为累加器，ECX/CX/CL称为计数寄存器
+寄存器ESP/SP称为栈指针寄存器，EBP/BP称为基址指针寄存器
 
 
 C.
@@ -231,4 +240,6 @@ C.
 0.50/0.50
 
 D.
-寄存器ESP/SP称为栈指针寄存器，EBP/BP称为基址指针寄存器
+EIP/IP为指令指针寄存器，即PC；EFLAGS/FLAGS为标志寄存器
+
+正确答案：C你选对了
