--- a/Computer-System/主存储器组织.md
+++ b/Computer-System/主存储器组织.md
@@ -1,3 +1,243 @@
+1单选(1分)
+下列几种存储器中，（  ）是易失性存储器。
 
+
+
+得分/总分
+
+A.
+EPROM
+
+
+B.
+Flash Memory
+
+
+C.
+cache
+
+1.00/1.00
+
+D.
+CD-ROM
+
+正确答案：C你选对了
+
+2单选(1分)
+下面有关半导体存储器组织的叙述中，错误的是（   ）。
+
+得分/总分
+
+A.
+同一个存储器中，每个存储单元的宽度可以不同
+
+1.00/1.00
+
+B.
+每个存储单元有一个编号，就是存储单元的地址
+
+
+C.
+存储单元由若干个存放0或1的记忆单元（cell）构成
+
+
+D.
+存储器的核心部分是存储阵列，由若干存储单元构成
+
+正确答案：A你选对了
+解析：  A、现代计算机的主存储器由半导体存储器构成，其中存放信息的地方称为存储阵列；每个存储阵列包含若干个存储单元，每个存储单元由若干个记忆单元（cell）构成，
+每个记忆单元存放一位信息（0或1）。
+某一台计算机的主存储器编址方式，总是由其对应的指令集体系结构（ISA）确定的；现代通用计算机大多采用按字节编址方式，即主存储器中每个字节有一个地址，也即每个存储单元的宽度都是8位。
+
+3单选(1分)
+若某个内存条容量为1GB，则说明该内存条中可存储（   ）个字节。
+
+得分/总分
+
+A.
+2^9
+
+
+B.
+
+10^9
+
+
+C.
+2^30
+
+1.00/1.00
+
+D.
+10^30
+
+正确答案：C你选对了
+
+4单选(1分)
+某32位计算机，主存地址为32位，按字节编址，则该计算机的主存地址范围是（  ）。
+
+得分/总分
+
+A.
+ 0～(4G-1)    
+
+1.00/1.00
+
+B.
+1～32G
+
+
+C.
+1～4G
+
+
+D.
+0～(32G-1)
+
+正确答案：A你选对了
+解析：  A、因为主存地址为32位，所以主存地址空间占2^32=4G个存储单元；因为按字节编址，因此，主存最大可存储的信息量为4GB=32Gbits。主存储器总是从0开始编号，因此存储单元的地址
+为0、1、2、……、2^32-1=4G-1。这里，4G-1=2^32-1=1 0000 0000 0000 0000 0000 0000 0000 0000 -1 = 1111 1111 1111 1111 1111 1111 1111 1111 = FFFF FFFFH。
+
+5单选(1分)
+假定主存地址空间大小为1024MB，按字节编址，每次读写操作最多可以一次存取32位。不考虑其它因素，则存储器地址寄存器MAR和存储器数据寄存器MDR的位数至少应分别为（   ）。
+
+得分/总分
+
+A.
+ 28，8
+
+
+B.
+30，8
+
+
+C.
+28，32
+
+0.00/1.00
+
+D.
+30，32
+
+正确答案：D你错选为C
+解析：  D、因为1024M=2^30，所以MAR至少为30位。
+
+6单选(1分)
+采用行、列地址引脚复用的半导体存储器芯片是（     ）。
+
+得分/总分
+
+A.
+SRAM
+
+
+B.
+DRAM
+
+1.00/1.00
+
+C.
+EPROM
+
+
+D.
+ Flash Memory
+
+正确答案：B你选对了
+
+7单选(1分)
+下面有关ROM和RAM的叙述中，错误的是（   ）。
+
+得分/总分
+
+A.
+计算机系统的主存由RAM和ROM组成
+
+
+B.
+计算机系统的主存都用DRAM芯片实现
+
+1.00/1.00
+
+C.
+RAM是可读可写存储器，ROM是只读存储器
+
+
+D.
+ROM和RAM都采用随机访问方式进行读写
+
+正确答案：B你选对了
+
+8单选(1分)
+下面有关半导体存储器的叙述中，错误的是（   ）。
+
+得分/总分
+
+A.
+ROM芯片属于半导体随机存储器芯片
+
+
+B.
+半导体存储器都采用随机存取方式进行读写
+
+1.00/1.00
+
+C.
+ DRAM是半导体动态随机访问存储器，可用作主存
+
+
+D.
+SRAM是半导体静态随机访问存储器，可用作cache
+
+正确答案：B你选对了
+解析：  B、有些情况下，可用半导体存储器实现相联存储器，即按内容进行访问，而不是按地址进行随机读写。
+
+9单选(1分)
+存储容量为16K×4位的DRAM芯片，其地址引脚和数据引脚数各是（   ）。
+
+得分/总分
+
+A.
+7和4
+
+1.00/1.00
+
+B.
+14和4
+
+
+C.
+7和1
+
+
+D.
+14和1
+
+正确答案：A你选对了
+解析：  A、因为DRAM芯片存储容量为16K×4位，故该芯片共有16K=2^14个存储单元，应该有14位地址，行、列地址引脚复用后，芯片的地址引脚数为7。每个存储单元占4位，因此芯片的数据引脚数为4。
+
+10单选(1分)
+假定用若干个16K×8位的存储器芯片组成一个64K×8位的存储器，芯片各单元交叉编址，则地址BFFFH所在的芯片的最小地址为（   ）。
+
+得分/总分
+
+A.
+ 0001H
+
+0.00/1.00
+
+B.
+0002H
+
+
+C.
+0000H
+
+
+D.
+0003H
+
+正确答案：D你错选为A
+解析：  D、用若干个16K×8位的存储器芯片构成64K×8位的存储器，需要64K×8位/（16K×8位）= 4个芯片。因为采用交叉编址方式，所以，存储单元地址对4取模后，低两位相同的存储单元在同一个芯片中。BFFFH的最低两位为11，显然，与0003H在同一个芯片中。
 
 
